[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/buttons/QuitButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/gui/buttons/OptionsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gui/buttons/CampaignButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/gui/menuicon.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/Fade.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/title.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/scripts/TitleScreen.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 7 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 64.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 68.0
margin_right = 1040.0
margin_bottom = 531.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 518.0
margin_bottom = 463.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="CampaignButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 121.0
margin_right = 518.0
margin_bottom = 181.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 201.0
margin_right = 518.0
margin_bottom = 261.0

[node name="QuitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 281.0
margin_right = 518.0
margin_bottom = 341.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 463.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 131.0
margin_top = 103.0
margin_right = 387.0
margin_bottom = 359.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_top = 535.0
margin_right = 1040.0
margin_bottom = 560.0

[node name="Studio" type="Label" parent="Menu/HBoxContainer"]
margin_right = 518.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Totobird Creations"

[node name="Version" type="Label" parent="Menu/HBoxContainer"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Dungeon Crawler r00"
align = 2

[node name="Fade" parent="." instance=ExtResource( 6 )]
visible = false

[node name="QuitConfirmationMenu" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -35.0
margin_right = 140.0
margin_bottom = 35.0
window_title = "Quit Confirmation"
dialog_text = "Are You Sure That You Wish To Quit?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/CenterRow/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="confirmed" from="QuitConfirmationMenu" to="." method="_on_QuitConfirmationMenu_confirmed"]
